--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mrlhumphreys/jxiangqi": "^0.1.0",
     "@types/three": "^0.182.0",
     "chess.js": "^1.4.0",
     "gsap": "^3.14.2",
