--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@gltf-transform/cli": "^4.3.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "draco3dgltf": "^1.5.7",
+    "meshoptimizer": "^1.0.1",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.5",
     "vue-tsc": "^3.1.4"
